2013-12-11  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c, hash.c, lib.c, rand.c, stream.c, syslog.c: Removing
	#include <assert.h> since none of these modules uses the standard C
	assert macro.

2013-12-10  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): closelog_wrap interned.

	* syslog.c (closelog_wrap): New function.

	* syslog.h (closelog_wrap): Declared.

	* txr.1: Documented.

2013-12-10  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register streamp, real_time_stream_p,
	stream_get_prop and stream_set_prop as intrinsics.

	* stream.c (stream_get_prop): New function.

	* stream.h (stream_get_prop): Declared.

	* syslog.c (syslog_get_prop): Bugfix: check for prio_k not real_time_k.

	* txr.1: Updated.

2013-12-10  Kaz Kylheku  <kaz@kylheku.com>

	syslog support; bitwise logior and logand functions become variadic.

	* Makefile: Use -iquote to restrict our #include search paths from
	being processed for #include <...>.  Add syslog.o to OBJS-y if
	have_syslog is y.

	* configure (have_syslog): New variable, set by detecting syslog API.

	* eval.c (eval_init): logand and logior registrations changed to
	go to variadic versions. New syslog variables and functions registered.

	* lib.c (logandv, logiorv): New functions.

	* lib.h (logandv, logiorv): Declared.

	* txr.c (main): Call syslog_init.

	* syslog.c: New file.

	* syslog.h: New file.

	* txr.1: Updated.

	* txr.vim: Regenerated.

2013-12-07  Kaz Kylheku  <kaz@kylheku.com>

	Version 71

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated.

2013-12-06  Kaz Kylheku  <kaz@kylheku.com>

	* parser.l (end_of_regex): Fix start condition stack underflow
	during regex_parse.

2013-12-06  Kaz Kylheku  <kaz@kylheku.com>

	* parser.l (regex_parse): Match the simplified grammar now
	expected in the parser, with no slashes around the regex.
	Change prefix for diagnostic message. 

2013-12-06  Kaz Kylheku  <kaz@kylheku.com>
